<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="main_company">Zillion United Co.,Ltd.</string>
    <string name="app_name">UT Swap</string>
    <string name="project">Projects</string>
    <string name="trade">Trade</string>
    <string name="forgot_password">Forget Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register_now">Register Now</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="or">OR</string>
    <string name="add_visa_or_master_card">Add Visa/ Master Card</string>
    <string name="add_bank_address">Add Bank Address</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="card_number">Card Number</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="next">Next</string>
    <string name="cvv">CVV</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="referral">Referral Id (Optional)</string>
    <string name="i_accept_terms_and_conditions">I accept Terms and Conditions</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="disclaimer_en">disclaimer</string>
    <string name="agreement_en">By submitting this UT Swap platform, you agreed and acknowledged that Zillion United shall not be liable for any losses or damages whether direct or indirect, arising from any transactions conducted through the UT Swap platform or the use of any channel to access the UT Swap platform. Trader/Investor shall be liable for their acts including unlawful interference or interception, corruption, delay, non-delivery or wrong delivery of any information provided through/for the Apps, and any breach of trading rules.</string>
    <string name="disclaimer_kh">ការបដិសេធ</string>
    <string name="agreement_kh">តាមរយៈការដាក់ពាក្យស្នើសុំធ្វើការជូញដូរក្នុងប្រព័ន្ធ UT Swap នេះ លោកអ្នកបានយល់ព្រម និងទទួលស្គាល់ថា Zillion United មិនទទួលខុសត្រូវ ចំពោះការបាត់បង់ ឬខូចខាតណាមួយ ទោះបីដោយផ្ទាល់ ឬដោយប្រយោល ដែលកើតចេញពីប្រតិបត្តិការអាជីវកម្មតាមរយៈ UT Swap នេះឬការប្រើប្រាស់បណ្តាញផ្សេងទៀតដើម្បីចូលទៅប្រើប្រាស់ កម្មវិធី UT Swap ។ អ្នកជួញដូរ/វិនិយោគិនត្រូវទទួលខុសត្រូវ ចំពោះសកម្មភាពទាំងឡាយរបស់ខ្លួន រួមមានអំពើខុសច្បាប់ ការបង្កឱ្យមានការរាំងស្ទះ អំពើពុករលួយ ការយឺតយ៉ាវ ការមិនបញ្ជូនព័ត៌មាន ឬការបញ្ជូនព័ត៌មានខុសតាមរយៈ/សម្រាប់កម្មវិធីនេះ និងការបំពានដទៃទៀតលើវិធាន នៃ ការជួញដូរនេះ។</string>
    <string name="register_agreement">Register Agreement</string>
    <string name="search">Search</string>
    <string name="breaking_new">Breaking New</string>
    <string name="view_all">View All</string>
    <string name="popular_news">Popular News</string>
    <string name="latest_news">Latest News</string>
    <string name="search_news">Search News</string>
    <string name="change">Change</string>
    <string name="last">Last</string>
    <string name="volume">Volume</string>
    <string name="base_price">Base Price</string>
    <string name="target_price">Target Price</string>
    <string name="ut_issued">UT Issued</string>
    <string name="setting">Setting</string>
    <string name="term">Term</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_later">Later</string>
    <string name="home">Home</string>
    <string name="article_news">Article News</string>
    <string name="profile">Profile</string>
    <string name="KYC">KYC</string>
    <string name="language">Language</string>
    <string name="login_password">Login Password</string>
    <string name="fund_password">Fund Password</string>
    <string name="log">Log</string>
    <string name="twofa">2FA</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_for_logout">Are you sure for logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="fullname">FullName</string>
    <string name="kyc_application">KYC Application</string>
    <string name="old_login_password">Old Login Password</string>
    <string name="new_login_password">New Login Password</string>
    <string name="confirm_new_login_password">Confirm New Login Password</string>
    <string name="forgot_fund_password">Forgot Fund Password</string>
    <string name="old_fund_password">Old Fund Password</string>
    <string name="new_fund_password">New Fund Password</string>
    <string name="confirm_new_fund_password">Confirm New Fund Password</string>
    <string name="transaction">Transaction</string>
    <string name="select_lock_screen_option">Select Lock Screen Option</string>
    <string name="twofa_setup">2FA Setup</string>
    <string name="account_type">Account Type</string>
    <string name="account_name">Account Name:</string>
    <string name="account_number">Account Number:</string>
    <string name="details">Details</string>
    <string name="upgrade">Upgrade</string>
    <string name="credit_card">Credit Card</string>
    <string name="valid_till">EXPIRY:</string>
    <string name="add_new_card">Add New Card</string>
    <string name="verify">Verify</string>
    <string name="full_name">Full Name</string>
    <string name="occupation">Occupation</string>
    <string name="company_name">Company Name</string>
    <string name="example_home_number_street">Example Home number #Street</string>
    <string name="selfie_image">Selfie Image</string>
    <string name="balance">Balance</string>
    <string name="deposit">Deposit</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="transfer">Transfer</string>
    <string name="subscription">Subscription</string>
    <string name="lock_up">Lock-Up</string>
    <string name="historical">Historical</string>
    <string name="trade_exchange">Trade Exchange</string>
    <string name="scan_qrcode">Scan QRCode</string>
    <string name="scan_qr">Scan QR</string>
    <string name="my_qr_code">My QR Code</string>
    <string name="notifications">Notifications</string>
    <string name="profile_qrcode">Profile QRCode</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="loading">Loading</string>
    <string name="personal">Personal</string>
    <string name="document">Document</string>
    <string name="address">Address</string>
    <string name="fund">Fund</string>
    <string name="done">Done</string>
    <string name="request">Request</string>
    <string name="to_">To:</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="total_balance">Total Balance:</string>
    <string name="_0_00">0.00$</string>
    <string name="available_balance">Available Balance</string>
    <string name="pending_balance">Pending Balance</string>
    <string name="export_pdf">Export PDF</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="amount">Amount</string>
    <string name="visa_master_card">Visa/Master Card</string>
    <string name="aba_pay">ABA PAY</string>
    <string name="aba_back">ABA Back</string>
    <string name="acleda_bank">ACLEDA Bank</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="payment_method">Payment Method:</string>
    <string name="choose_your_payment_method">Choose your Payment Method</string>
    <string name="amount_">Amount:</string>
    <string name="fee">Fee:</string>
    <string name="total">Total:</string>
    <string name="deposit_methods">Deposit methods</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="id">ID</string>
    <string name="methods">Methods</string>
    <string name="submit">Submit</string>
    <string name="receiving_address">Receiving Address</string>
    <string name="fee_">Fee</string>
    <string name="withdrawal_balance_0_00">Withdrawal Balance: $ 0.00</string>
    <string name="withdrawal_balance">Withdrawal Balance</string>
    <string name="withdrawal_amount">Withdrawal Amount</string>
    <string name="pending1">Pending :</string>
    <string name="withdrawal_fee_1_50">Withdrawal fee 1.50%</string>
    <string name="withdraw">Withdraw</string>
    <string name="sender">Sender</string>
    <string name="receiver">Receiver</string>
    <string name="transfer_balance_0_00">Transfer Balance: $ 0.00</string>
    <string name="zero">000 000 0000</string>
    <string name="enter_receiver_s_phone_number">Enter Receiver\'s phone number</string>
    <string name="transfer_amount">Transfer Amount</string>
    <string name="receiver_phone_number">Receiver Phone Number</string>
    <string name="transfer_big_letter">Transfer</string>
    <string name="price">Price</string>
    <string name="total_locked_balance_0_00">Total Locked Balance: $ 0.00</string>
    <string name="lock_up_period">Lock-up Period</string>
    <string name="no_data_available_in_table">No data available in table</string>
    <string name="date">Date</string>
    <string name="date_and_time">Date &amp; Time</string>
    <string name="filter">Filter:</string>
    <string name="register">Register</string>
    <string name="enter_account_details">Enter Account Details</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="didn_t_get_your_code">Didn\'t get your code?</string>
    <string name="resend">Resend</string>
    <string name="back">Back</string>
    <string name="subscribe">Subscribe</string>
    <string name="upcoming">Upcoming</string>
    <string name="my_wallet">My Wallet</string>
    <string name="no_record">No record</string>
    <string name="more">More</string>
    <string name="filters">Filters</string>
    <string name="status">Status</string>
    <string name="date_range">Date Range</string>
    <string name="clear">Clear</string>
    <string name="export">Export</string>
    <string name="transfer_capital_letter">Transfer</string>
    <string name="period">Period</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="verification">Verification</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions.</string>
    <string name="id_verification">ID Verification</string>
    <string name="please_ensure_that_the_information_below_is_correct">Please ensure that the information below is correct.</string>
    <string name="can_t_keep_empty">Can\'t Keep Empty</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="company">Company</string>
    <string name="employment">Employment</string>
    <string name="other_information">Other Information</string>
    <string name="wallet">Wallet</string>
    <string name="portfolio">Portfolio</string>
    <string name="Please_confirm_your_order">Please Confirm Your Order.</string>
    <string name="confirm">Confirm</string>
    <string name="money3">1 990.00</string>
    <string name="Subscription">Subscription:</string>
    <string name="ut_pochentong">UT Pochentong 555</string>
    <string name="subscription_lock_period">Subscription amount is subjected to a locked period of 30 Day(s)</string>
    <string name="volume_input">Volume:</string>
    <string name="ut_price">500 UT</string>
    <string name="asset">Asset</string>
    <string name="trading_balance_cash">Trading Balance (Cash)</string>
    <string name="volume_ut">Volume (UT)</string>
    <string name="value_dollar">Value ($)</string>
    <string name="swap">Swap</string>
    <string name="time">Time</string>
    <string name="action_remarks">Action Remarks</string>
    <string name="news">News</string>
</resources>