<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_navbar_trade">

    <fragment
        android:id="@+id/navigation_navbar_home"
        android:name="com.zillennium.utswap.module.main.home.HomeFragment"
        android:label="@string/project"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_navbar_portfolio"
        android:name="com.zillennium.utswap.module.main.portfolio.PortfolioFragment"
        android:label="@string/portfolio"
        tools:layout="@layout/fragment_navbar_portfolio" />

    <fragment
        android:id="@+id/navigation_navbar_trade"
        android:name="com.zillennium.utswap.module.main.trade.tradeScreen.TradeFragment"
        android:label="@string/trade"
        tools:layout="@layout/fragment_navbar_trade">
    </fragment>

    <fragment
        android:id="@+id/navigation_navbar_news"
        android:name="com.zillennium.utswap.module.main.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news">
    </fragment>

</navigation>