<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_bg">

        <TextView
            android:id="@+id/choosetxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/register_agreement"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"/>

        <View
            android:id="@+id/line_or"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer_en"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement_en"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer_kh"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement_kh"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</layout>
