<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dimen_15">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:gravity="start"
            android:textAppearance="@style/regular_10"
            android:layout_weight="1"
            android:text="@string/time"/>

        <TextView
            android:id="@+id/txt_action_remarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black_000000"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/regular_10"
            android:text="@string/action_remarks"/>

        <TextView
            android:id="@+id/txt_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black_000000"
            android:layout_weight="1"
            android:gravity="end"
            android:textAppearance="@style/regular_10"
            android:text="@string/status"/>

    </LinearLayout>

</LinearLayout>