<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/dimen_15"
        android:paddingStart="@dimen/dimen_15"
        android:paddingEnd="@dimen/dimen_15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_green_total_balance"
            android:padding="@dimen/dimen_15">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transfer_balance_0_00"
                android:textColor="@color/dark_green"
                android:textSize="16sp"
                android:gravity="center"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receiver_s_phone_number"
            android:textSize="@dimen/font_size_18"
            android:layout_marginTop="@dimen/dimen_10"
            android:textColor="@color/color_main"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_receiver_s_phone_number"
            android:background="@drawable/bg_date"
            android:padding="@dimen/dimen_10"
            android:inputType="number"
            android:maxLength="10"
            android:layout_marginTop="@dimen/dimen_10"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transfer_amount"
            android:textSize="@dimen/font_size_18"
            android:layout_marginTop="@dimen/dimen_10"
            android:textColor="@color/color_main"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:background="@drawable/bg_date"
            android:padding="@dimen/dimen_10"
            android:inputType="number"
            android:maxLength="10"
            android:layout_marginTop="@dimen/dimen_10"/>

        <LinearLayout
            android:id="@+id/btn_transfer_confirm"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_40"
            android:background="@drawable/bg_date"
            android:backgroundTint="@color/color_main"
            android:layout_marginTop="@dimen/dimen_10"
            android:foreground="?attr/selectableItemBackground"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/transfer_big_letter"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingStart="@dimen/dimen_40"
                android:paddingEnd="@dimen/dimen_40"
                android:textSize="@dimen/font_size_14"/>
        </LinearLayout>

    </LinearLayout>
</layout>