<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/dimen_10"
        android:layout_margin="@dimen/dimen_10"
        android:padding="@dimen/dimen_15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_10"
            android:paddingBottom="@dimen/dimen_20"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Please_confirm_your_order"
                android:textAppearance="@style/regular_14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Subscription"
                        android:textAppearance="@style/regular_12" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/ut_pochentong"
                        android:textAppearance="@style/regular_12" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_1"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:background="@color/thirst_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/volume_input"
                        android:textAppearance="@style/regular_12" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/ut_price"
                        android:textAppearance="@style/regular_12" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_1"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:background="@color/thirst_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textAppearance="@style/regular_12" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/money3"
                        android:textAppearance="@style/regular_12" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20"
                    android:gravity="center"
                    android:text="@string/subscription_lock_period"
                    android:textAppearance="@style/regular_12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20"
                    android:layout_marginTop="@dimen/dimen_30"
                    android:layout_marginEnd="@dimen/dimen_20"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/btn_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_50"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:background="@drawable/bg_circular_condition"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/confirm"
                            android:textAllCaps="false"
                            android:textAppearance="@style/bold_18"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20"
                    android:layout_marginEnd="@dimen/dimen_20"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/back"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_50"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:background="@drawable/btn_back"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/back"
                            android:textAllCaps="false"
                            android:textAppearance="@style/bold_18"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>
