<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asset"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/font_size_12"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/volume_ut"
                    android:textColor="@color/dark_gray"
                    android:layout_marginEnd="@dimen/dimen_40"
                    android:textSize="@dimen/font_size_12"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_dollar"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/font_size_12"/>

            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:overScrollMode="never"
            android:nestedScrollingEnabled="false"
            android:layout_marginTop="@dimen/dimen_10"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trading_balance_cash"
                android:textColor="@color/color_main"
                android:textSize="@dimen/font_size_14"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="$6 420.99"
                android:textColor="@color/black_333333"
                android:textSize="@dimen/font_size_14"/>

        </LinearLayout>

    </LinearLayout>
</layout>